# immich-auto-uploader

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Makefile  README.md  devbox.json  flake.nix  home-manager.nix  nixos-service.nix  package.nix  pyproject.toml  pytest.ini  test-requirements.txt  user-service.nix
src/: config.py  file_processor.py  file_watcher.py  immich_client.py  main.py  notifier.py  requirements.txt
tests/: conftest.py  test_config.py  test_file_processor.py  test_file_watcher.py  test_immich_client.py
